[package]
name = "rc-vec"
version = "0.1.11"
edition = "2021"

authors = ["A4-Tacks <wdsjxhno1001@163.com>"]
keywords = ["no_std", "vec", "vector", "rc", "arc"]
categories = ["no-std", "data-structures", "rust-patterns"]
description = "RcVec based on Rc and can be converted from Rc without allocation"

license = "MIT"
repository = "https://github.com/A4-Tacks/rc-vec-rs"
readme = "README.md"

[package.metadata.docs.rs]
all-features = true

[workspace]
members = ["rc-vec-proc_macro"]

[features]
std = ["unique-rc/std", "serde?/std"]
serde = ["dep:serde", "unique-rc/serde"]

[dev-dependencies]
criterion = "0.5.1"

[dependencies]
unique-rc = "0.2.3"
rc-vec-proc_macro = { version = "0.1.0", path = "rc-vec-proc_macro" }
serde = { version = "1.0.219", optional = true, features = ["alloc"], default-features = false }

[[bench]]
name = "basic"
harness = false

[profile.release]
#debug = true
